--- a/assets/style/components/root/index.less
+++ b/assets/style/components/root/index.less
@@ -14,6 +14,17 @@ body {
 	transition: background .3s ease-in, color .3s ease-in;
 }
 
+html,
+body {
+	width: 100%;
+	min-width: 320px;
+}
+
+[data-application="data-application"] {
+	width: 100%;
+	overflow-x: hidden;
+}
+
 a {
 	text-decoration: none;
 
